src/test/ui/static/static-region-bound.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/static-region-bound.rs:10:14
   |
LL |     let x = &id(3);
   |              ^^^^^ temporary value does not live long enough
LL |     f(x);
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
